<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="post"
            type="com.genlz.jetpacks.pojo.Post" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/avatar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/avatar"
                android:src="@drawable/ic_baseline_account_circle_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/CircularShape"
                app:srcUri="@{post.user.avatar}"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{post.user.username}"
                app:layout_constraintStart_toEndOf="@+id/avatar"
                app:layout_constraintTop_toTopOf="@+id/avatar"
                tools:text="用户名" />

            <TextView
                android:id="@+id/post_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{post.user.postDevice}"
                app:layout_constraintStart_toStartOf="@+id/username"
                app:layout_constraintTop_toBottomOf="@+id/username"
                tools:text="发帖设备" />

            <ImageView
                android:id="@+id/identified_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:identified="@{post.user.identified}"
                app:layout_constraintBottom_toBottomOf="@+id/avatar"
                app:layout_constraintEnd_toEndOf="@+id/avatar"
                app:srcCompat="@drawable/ic_baseline_verified_24"
                tools:ignore="ContentDescription" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/follow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/follow"
                app:cornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/post_thumbnail"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/post_thumbnail"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatar"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/post_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@{post.title}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_thumbnail"
                tools:text="标题" />

            <TextView
                android:id="@+id/post_abstract"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@{post.abstraction}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_title"
                tools:text="摘要" />

            <TextView
                android:id="@+id/post_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{post.tags.get(0)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_abstract"
                tools:text="标签" />

            <TextView
                android:id="@+id/post_comments_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@{post.comments+``}"
                app:layout_constraintBottom_toBottomOf="@+id/ic_comment"
                app:layout_constraintEnd_toStartOf="@+id/ic_thumbs"
                app:layout_constraintTop_toTopOf="@+id/ic_comment"
                tools:text="评论" />

            <TextView
                android:id="@+id/post_views"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{post.views+``}"
                app:layout_constraintBottom_toBottomOf="@+id/post_time"
                app:layout_constraintStart_toEndOf="@+id/post_time"
                app:layout_constraintTop_toTopOf="@+id/post_time"
                tools:text="浏览量" />

            <TextView
                android:id="@+id/post_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{post.postTime.toString()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_tag"
                tools:text="时间" />

            <TextView
                android:id="@+id/post_thumbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{post.thumbs+``}"
                app:layout_constraintBottom_toBottomOf="@+id/ic_thumbs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ic_thumbs"
                tools:text="点赞数" />

            <ImageView
                android:id="@+id/ic_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                app:layout_constraintBottom_toBottomOf="@+id/post_views"
                app:layout_constraintEnd_toStartOf="@+id/post_comments_area"
                app:layout_constraintTop_toTopOf="@+id/post_views"
                app:srcCompat="@drawable/ic_baseline_comment_24"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/ic_thumbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/post_comments_area"
                app:layout_constraintEnd_toStartOf="@+id/post_thumbs"
                app:layout_constraintTop_toTopOf="@+id/post_comments_area"
                app:srcCompat="@drawable/ic_baseline_thumb_up"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>